# pinocchio-price-account

./: Cargo.toml  package-lock.json  package.json  wallet.json
idl/: pinocchio_price_account.json
src/: lib.rs
src/instructions/: create_price_account.rs  get_price.rs  mod.rs  modify_price.rs  set_price.rs
src/states/: mod.rs  price_account.rs
tests/: testing.ts
