cargo-features = ["edition2024"]

[package]
name = "pinocchio-price-account"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"

[dev-dependencies]
mollusk-svm = "0.4.1"
solana-sdk = "2.3.1"